[package]
name = "twba-common"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-appender = "0.2"


twba-backup-config = { version = "0.1", git = "https://github.com/OMGeeky/backup_config.git" }
twba-local-db = { version = "0.3", git = "https://github.com/OMGeeky/twitch_backup.local_db.git" }
serde = { version = "1.0.199", features = ["derive"] }
